@@ -1,0 +1,20 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+    <meta type="array">
+        <description></description>
+        <type>module</type>
+        <csh_table></csh_table>
+        <fileId>EXT:dam/modfunc_info_reference/locallang.xml</fileId>
+        <labelContext type="array">
+            <label index="tx_dam_info_reference.title"></label>
+        </labelContext>
+    </meta>
+    <data type="array">
+        <languageKey index="default" type="array">
+            <label index="tx_dam_info_reference.title">References</label>
+        </languageKey>
+        <languageKey index="de" type="array">
+            <label index="tx_dam_info_reference.title">Referenzen</label>
+        </languageKey>
+    </data>
+</T3locallang>
